--- a/app/src/main/res/layout/user_login.xml
+++ b/app/src/main/res/layout/user_login.xml
@@ -36,66 +36,14 @@
         android:layout_margin="10dp"
         android:id="@+id/CommForm">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Please fill in the details:"
-            android:id="@+id/header"
-            android:layout_gravity="left"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="15dp"
-            android:textSize="28sp"
-            android:textColor="@color/colorPrimaryDark" />
 
-
-
-
-
-            <RelativeLayout
+        <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ddd"
                 android:padding="10dp"
                 android:id="@+id/bookLayout">
-
-                <EditText
-                    android:layout_width="350dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/email"
-                    android:layout_gravity="right"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:background="#fff"
-                    android:padding="5dp"
-                    android:textSize="25sp"
-                    android:hint="Bits Mail"
-                    android:layout_alignTop="@+id/titleText"
-                    android:layout_alignRight="@+id/accno"
-                    android:layout_alignEnd="@+id/accno"
-                    android:layout_toEndOf="@+id/authorText"
-                    android:layout_toRightOf="@+id/authorText"
-                    />
-
-
-
-
-
-                <EditText
-                    android:layout_width="350dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/pass"
-                    android:layout_gravity="right"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:background="#fff"
-                    android:padding="5dp"
-                    android:textSize="25sp"
-                    android:hint="Password"
-                    android:layout_below="@+id/email"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    />
 
 
             </RelativeLayout>
@@ -109,11 +57,12 @@
             android:backgroundTint="@color/colorPrimaryDark"
             android:id="@+id/bt_signin"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_marginTop="52dp"
-            android:layout_below="@+id/bookLayout"
-            android:layout_alignLeft="@+id/header"
-            android:layout_alignStart="@+id/header"
-            android:onClick="OnClick_sign_in" />
+            android:onClick="OnClick_sign_in"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/pass"
+            android:layout_marginTop="40dp"
+            />
 
         <Button
             android:layout_width="wrap_content"
@@ -124,12 +73,38 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:textSize="20dp"
             android:id="@+id/bt_forgot"
-            android:layout_alignTop="@+id/bt_signin"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="15dp"
-            android:onClick="OnClick_forgot_pass" />
+            android:onClick="OnClick_forgot_pass"
+            android:layout_below="@+id/bt_signin"
+            android:layout_centerHorizontal="true"
+            />
 
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:id="@+id/pass"
+            android:layout_gravity="right"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="#fff"
+            android:padding="5dp"
+            android:textSize="25sp"
+            android:hint="Password"
+            android:layout_below="@+id/email"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp" />
+
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:id="@+id/email"
+            android:layout_gravity="right"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="#fff"
+            android:padding="5dp"
+            android:textSize="25sp"
+            android:hint="Bits Mail"
+            android:layout_below="@+id/bookLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp" />
 
 
     </RelativeLayout>
