--- a/app/src/main/res/layout/infobits_customcell.xml
+++ b/app/src/main/res/layout/infobits_customcell.xml
@@ -5,7 +5,7 @@
 
     android:orientation="vertical" >
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/bookImage"
         android:layout_gravity="center"
         android:layout_width="88dp"
