--- a/app/src/main/res/layout/activity_lib_service.xml
+++ b/app/src/main/res/layout/activity_lib_service.xml
@@ -45,7 +45,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="25dp"
-                android:layout_alignBottom="@+id/imgbt_service2" />
+                android:layout_alignBottom="@+id/imgbt_news" />
 
             <ImageButton
                 android:layout_width="wrap_content"
