--- a/app/src/main/res/layout/activity_lib_service.xml
+++ b/app/src/main/res/layout/activity_lib_service.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_info"
-                android:src="@drawable/info"
+                android:src="@mipmap/infobits"
                 android:onClick="onClickBulletin"
                 android:scaleType="fitCenter"
                 android:minHeight="120dp"
@@ -51,13 +51,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_news"
-                android:src="@drawable/daily_news"
+                android:src="@mipmap/dn"
                 android:onClick="onClickDailyNews"
                 android:clickable="true"
                 android:background="#211d70"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="25dp"
-                android:layout_toRightOf="@+id/imgbt_info" />
+                android:layout_marginTop="46dp"
+                android:scaleType="fitCenter"
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/imgbt_service4"
+                android:layout_toEndOf="@+id/imgbt_service4"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -67,7 +73,10 @@
                 android:src="@drawable/ebxii"
                 android:background="#211d70"
                 android:layout_below="@+id/imgbt_info"
-                android:layout_margin="25dp" />
+                android:layout_margin="25dp"
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                />
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -76,8 +85,13 @@
                 android:onClick="onClickIR"
                 android:src="@drawable/irxii"
                 android:background="#211d70"
+                android:layout_alignTop="@+id/imgbt_service4"
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                android:layout_alignRight="@+id/imgbt_news"
+                android:layout_alignEnd="@+id/imgbt_news"
                 android:layout_alignLeft="@+id/imgbt_news"
-                android:layout_alignTop="@+id/imgbt_service4" />
+                android:layout_alignStart="@+id/imgbt_news" />
 
         </RelativeLayout>
 
