--- a/app/src/main/res/layout/activity_lib_service.xml
+++ b/app/src/main/res/layout/activity_lib_service.xml
@@ -15,7 +15,7 @@
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:id="@+id/nav_toolbar" app:logo="@mipmap/libr"
+            android:id="@+id/nav_toolbar" app:logo="@mipmap/libs"
             android:background="@color/colorPrimaryDark"
             android:minHeight="?attr/actionBarSize"
             android:fitsSystemWindows="true"
